--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <link href="css/fontawesome/css/all.css" type="text/css" rel="stylesheet">
 <body>
   <section class="wrapper">
-    <h1>TODO today</h1>
-    <p>Enter text into the input field to add items to your list.</p>
-    <p>Click items to mark them as done!</p>
+    <h1>What Will I Do Today?</h1>
+    <p>Need a clean and easy way to keep track of your daily lists?</p>
+    <p>Just write them down here and click when they're completed!</p>
     <div class="inputContainer">
       <input type="input" id="todoItem">
       <button id="enter"><i class="fas fa-pencil-alt"></i></button>
